2006-03-19  Ulrich Pfeifer  <upf@de.uu.net>

	* Fixed a bug reported by Florian Ragwitz:  Absolute filenames
	were access incorrectly from hit list.

2005-09-18  Ulrich Pfeifer  <pfeifer@wait.de>

	* Integrated a patch from Marek Rouchal to use Pod::Text for
	parsing if available.  I did rework the patch a little to remove
	the need for IO::Scalar which does no seem to be part of debian
	sarge.  Now underscore is also a valid letter.

2005-04-10  Ulrich Pfeifer  <upf@wait.de>

	* Re-Added Text::English as it does not seem to be available
	separately.  I'd rather not package a "foreign" separately.

2005-04-03  Ulrich Pfeifer  <pfeifer@wait.de>

	* Removed Text::English from Distribution
	* Determine pager and search path at run time (Patch from Marek, Ticket #4506)

2004-05-02  Florian Ragwitz

	* please parameterize the $IDIR in the make process
	* clarified license
	* clarified authorship of Text::English
	
2003-06-19  Slaven Rezic 

	* t/basic.t: made test more safe and portable

2003-06-18  Ulrich Pfeifer  <pfeifer@wait.de>

	Added some regression tests before the CPAN testers beat me up.

2003-06-18  Slaven Rezic 

        [cpan #2820] Fix indexed directories

        In some perl installations, installsitelib is not part of the
	privlib directory. That is, privlib is something like
	/usr/local/lib/perl5/5.8.0 and installsitelib something like
	/usr/local/lib/perl5/site_perl/5.8.0.  This causes the perlindex
	indexer not to dive into installsitelib.


Sun Mar 10 13:05:46 MET 1996   "Chuck D. Phillips (NON-HP Employee)" <cdp@hpescdp.fc.hp.com>

By default, the program perlindex isn't deleted when you do a "make
clean" the result is that the Config.pm constants don't get updated
next time you do a "make all".  To fix this, you can add the following
line to the WriteMakefile() parameters in Makefile.PL:

	      'clean' =>	{ 'FILES' => 'perlindex' },


Nit: Term::ReadKey is more reliable for cbreak than using $d_bsd.  On